--- a/TP3/src/Makefile
+++ b/TP3/src/Makefile
@@ -13,11 +13,11 @@ DEPEND = Makefile \
 	kernel.asm isr.asm \
 	imprimir.mac \
 	defines.h \
-	gdt.c gdt.h pic.c pic.h idt.c idt.h isr.h tss.c tss.h mmu.c mmu.h \
+	gdt.c gdt.h pic.c pic.h idt.c idt.h isr.h israux.c israux.h tss.c tss.h mmu.c mmu.h \
 	sched.c sched.h screen.c screen.h \
 	game.c game.h syscall.h
 
-OBJ=$(KERNEL_OBJ) gdt.o pic.o idt.o isr.o mmu.o sched.o tss.o screen.o game.o
+OBJ=$(KERNEL_OBJ) gdt.o pic.o idt.o isr.o israux.o mmu.o sched.o tss.o screen.o game.o
 DISK_IMG=diskette.img
 DISK_IMG_BZ=diskette.img.bz2
 
